# UNOCG

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATION.md  LICENSE  README.md  pyproject.toml  setup.py
data/: README.md  download_data.sh
examples/ijnme2026/: evaluate_mechanical_2d_dir.ipynb  evaluate_mechanical_2d_dir.py  evaluate_mechanical_2d_mixed.ipynb  evaluate_mechanical_2d_mixed.py  evaluate_mechanical_2d_per.ipynb  evaluate_mechanical_2d_per.py  evaluate_mechanical_3d_dir.ipynb  evaluate_mechanical_3d_dir.py  evaluate_mechanical_3d_mixed.ipynb  evaluate_mechanical_3d_mixed.py  evaluate_mechanical_3d_per.ipynb  evaluate_mechanical_3d_per.py  evaluate_thermal_2d_per.ipynb  evaluate_thermal_2d_per.py  evaluate_thermal_3d_dir.ipynb  evaluate_thermal_3d_dir.py  evaluate_thermal_3d_per.ipynb  evaluate_thermal_3d_per.py
unocg/: base.py  config.py
unocg/materials/: __init__.py  base.py  mechanical.py  thermal.py
unocg/modules/: operators.py  preconditioners.py  solvers.py
unocg/preconditioners/: __init__.py  base.py  torch.py
unocg/problems/: __init__.py  base.py  mechanical.py  thermal.py
unocg/solvers/: __init__.py  base.py  torch.py
unocg/training/losses/: __init__.py  base.py  mechanical.py  thermal.py
unocg/transforms/: __init__.py  base.py  fourier.py
unocg/utils/: data.py  evaluation.py  plotting.py
