[project]
name = "unocg"
version = "0.0.1"
authors = [
  { name="Julius Herb", email="herb@mib.uni-stuttgart.de" },
]
description = "UNO-CG"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/DataAnalyticsEngineering/UNOCG"
Issues = "https://github.com/DataAnalyticsEngineering/UNOCG/issues"
