[project]
name = "unocg"
version = "1.0.0"
authors = [
  { name="Julius Herb", email="herb@mib.uni-stuttgart.de" },
  { name="Felix Fritzen", email="fritzen@mib.uni-stuttgart.de" },
]
description = "UNO-CG"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["UNO", "CG", "preconditioner", "PDE", "homogenization"]
dependencies = [
    "numpy~=2.4.1",
    "h5py~=3.15.1",
    "matplotlib~=3.10.8",
    "scipy~=1.17.0",
    "torch==2.10.0",
    "tqdm~=4.67.1",
    "torchvision~=0.25.0",
    "pyvista[jupyter]~=0.46.5",
    "jupyterlab~=4.5.3",
]

[project.optional-dependencies]
dev = [
    "jupytext~=1.16.4",
    "pre_commit~=3.8.0",
    "sphinx~=7.4.7",
    "sphinx-rtd-theme~=2.0.0",
    "myst-parser~=4.0.0",
    "nbsphinx~=0.9.5",
    "sphinx-gallery~=0.17.1",
]
all = [
    "unocg[dev]"
]

[project.urls]
Homepage = "https://github.com/DataAnalyticsEngineering/UNOCG"
Issues = "https://github.com/DataAnalyticsEngineering/UNOCG/issues"
